add new features

--- a/corretor.ipynb
+++ b/corretor.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "source": [
     "import nltk\r\n",
     "nltk.download('punkt')\r\n",
     "\r\n",
-    "\r\n",
     "with open(\"artigos.txt\", encoding=\"utf8\") as f:\r\n",
     "    artigos = f.read()\r\n",
-    "    \r\n",
-    "#print(artigos[:505])\r\n",
     "    "
    ],
    "outputs": [
@@ -36,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 93,
    "source": [
     "def separa_palavras(lista_tokens):\r\n",
     "    lista_palavras = []\r\n",
@@ -51,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
    "source": [
     "lista_tokens = nltk.tokenize.word_tokenize(artigos)\r\n",
     "\r\n",
@@ -68,91 +65,32 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 94
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "source": [
     "def normalizacao(lista_de_palavras):\r\n",
     "    lista_normalizada = []\r\n",
     "    for palavra in lista_de_palavras:\r\n",
     "        lista_normalizada.append(palavra.lower())\r\n",
     "    \r\n",
-    "    return lista_normalizada"
+    "    return lista_normalizada\r\n",
+    "\r\n",
+    "lista_normalizada = normalizacao(palavras_separadas)    "
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "source": [
-    "lista_normalizada = normalizacao(palavras_separadas)\r\n",
-    "\r\n",
-    "print(lista_normalizada[:100])"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['imagem', 'temos', 'a', 'seguinte', 'classe', 'que', 'representa', 'um', 'usuário', 'no', 'nosso', 'sistema', 'java', 'para', 'salvar', 'um', 'novo', 'usuário', 'várias', 'validações', 'são', 'feitas', 'como', 'por', 'exemplo', 'ver', 'se', 'o', 'nome', 'só', 'contém', 'letras', 'o', 'cpf', 'só', 'números', 'e', 'ver', 'se', 'o', 'usuário', 'possui', 'no', 'mínimo', 'anos', 'veja', 'o', 'método', 'que', 'faz', 'essa', 'validação', 'java', 'suponha', 'agora', 'que', 'eu', 'tenha', 'outra', 'classe', 'a', 'classe', 'produto', 'que', 'contém', 'um', 'atributo', 'nome', 'e', 'eu', 'quero', 'fazer', 'a', 'mesma', 'validação', 'que', 'fiz', 'para', 'o', 'nome', 'do', 'usuário', 'ver', 'se', 'só', 'contém', 'letras', 'e', 'aí', 'vou', 'criar', 'outro', 'método', 'para', 'fazer', 'a', 'mesma', 'validação', 'ou', 'criar']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "source": [
-    "len(set(lista_normalizada))"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "18465"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 31
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "source": [
-    "lista = [1,2,3]\r\n",
-    "lista[0]\r\n",
-    "\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 32
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "source": [
-    "def insere_letras(fatias):\r\n",
+    "def insere_caracter(fatias):\r\n",
     "    novas_palavras = []\r\n",
     "    letras = 'abcdefghijklmnopqrstuvwxyzàáâãèéêìíîòóôõùúûç'\r\n",
     "\r\n",
@@ -167,9 +105,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "source": [
-    "palavra_exemplo = \"lgica\"\r\n",
+    "def deletando_caracter(fatias):\r\n",
+    "    \r\n",
+    "    novas_palavras = []\r\n",
+    "\r\n",
+    "    for E,D in fatias:\r\n",
+    "        novas_palavras.append(E + D[1:])\r\n",
+    "\r\n",
+    "    return novas_palavras"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "source": [
+    "def troca_caracter(fatias):\r\n",
+    "    novas_palavras = []\r\n",
+    "    letras = 'abcdefghijklmnopqrstuvwxyzàáâãèéêìíîòóôõùúûç'\r\n",
+    "\r\n",
+    "    for E,D in fatias:\r\n",
+    "        for letra in letras:\r\n",
+    "            novas_palavras.append(E + letra + D[1:])\r\n",
+    "\r\n",
+    "    return novas_palavras    \r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "source": [
+    "def inverte_caracter(fatias):\r\n",
+    "    novas_palavras = []\r\n",
+    "\r\n",
+    "    for E,D in fatias:\r\n",
+    "        if(len(D) > 1):\r\n",
+    "            novas_palavras.append(E + D[1] + D[0] +  D[2:])\r\n",
+    "\r\n",
+    "    return novas_palavras"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "source": [
     "def gerador_palavras(palavra):\r\n",
     "\r\n",
     "    fatias = []\r\n",
@@ -178,287 +164,108 @@
     "    for i in range(len(palavra)+1):\r\n",
     "        fatias.append((palavra[:i],palavra[i:]))\r\n",
     "\r\n",
-    "    palavras_geradas = insere_letras(fatias)\r\n",
+    "    palavras_geradas = insere_caracter(fatias)\r\n",
+    "    palavras_geradas += deletando_caracter(fatias)\r\n",
+    "    palavras_geradas += troca_caracter(fatias)\r\n",
+    "    palavras_geradas += inverte_caracter(fatias)\r\n",
     "    \r\n",
-    "    # print(fatias)\r\n",
-    "    return palavras_geradas\r\n",
+    "    return palavras_geradas"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "source": [
+    "total_de_palavras = len(lista_normalizada)\r\n",
+    "frequencia = nltk.FreqDist(lista_normalizada)\r\n",
+    "\r\n",
+    "def probabilidade(palavra_gerada):\r\n",
+    "    return frequencia[palavra_gerada]/total_de_palavras\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "source": [
+    "def corretor(palavra: str):\r\n",
+    "    '''\r\n",
+    "        function Corretor ortográfico\r\n",
+    "\r\n",
+    "        palavra : palavra que vamos verificar \r\n",
+    "    '''\r\n",
+    "    palavras_geradas = gerador_palavras(palavra)\r\n",
+    "\r\n",
+    "    palavra_correta = max(palavras_geradas,key =probabilidade)\r\n",
+    "\r\n",
+    "    return palavra_correta\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Testes e avaliação da performance"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "source": [
+    "def cria_dados_de_testes(nome_do_arquivo):\r\n",
+    "    list_de_palavras_teste = []\r\n",
+    "\r\n",
+    "    f = open(nome_do_arquivo, mode=\"r\", encoding=\"utf-8\")\r\n",
+    "\r\n",
+    "    for linha in f:\r\n",
+    "        correta, errada = linha.split()\r\n",
+    "        list_de_palavras_teste.append((correta,errada))\r\n",
+    "\r\n",
+    "    f.close()\r\n",
+    "\r\n",
+    "    return list_de_palavras_teste\r\n",
     "\r\n",
     "\r\n",
-    "gerador_palavras(palavra_exemplo)"
+    "def avaliador(teste, vocabulario):\r\n",
+    "    numero_de_palavras = len(teste)\r\n",
+    "    acertou = 0\r\n",
+    "    desconhecida = 0\r\n",
+    "\r\n",
+    "    for correta, errada in teste:\r\n",
+    "        palavra_corrigida = corretor(errada)\r\n",
+    "\r\n",
+    "        desconhecida += (correta not in vocabulario)    \r\n",
+    "        if palavra_corrigida == correta:\r\n",
+    "            acertou +=1\r\n",
+    "\r\n",
+    "    taxa_acerto = acertou*100/numero_de_palavras\r\n",
+    "    taxa_desconhecida = desconhecida*100/numero_de_palavras\r\n",
+    "    print(f\"taxa de acerto {round(taxa_acerto,2)}% de {numero_de_palavras} palavras, desconhecidas é {taxa_desconhecida}%\")\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "lista_teste = cria_dados_de_testes('palavras.txt')\r\n",
+    "\r\n",
+    "vocabulario = set(lista_normalizada)\r\n",
+    "avaliador(lista_teste,vocabulario)\r\n",
+    "\r\n",
+    "\r\n",
+    "# v1.0 = taxa de acerto 0.1 % \r\n",
+    "# v2.0 = taxa de acerto 41.4 % \r\n",
+    "# v3.0 = taxa de acerto 76.34%\r\n"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['algica',\n",
-       " 'blgica',\n",
-       " 'clgica',\n",
-       " 'dlgica',\n",
-       " 'elgica',\n",
-       " 'flgica',\n",
-       " 'glgica',\n",
-       " 'hlgica',\n",
-       " 'ilgica',\n",
-       " 'jlgica',\n",
-       " 'klgica',\n",
-       " 'llgica',\n",
-       " 'mlgica',\n",
-       " 'nlgica',\n",
-       " 'olgica',\n",
-       " 'plgica',\n",
-       " 'qlgica',\n",
-       " 'rlgica',\n",
-       " 'slgica',\n",
-       " 'tlgica',\n",
-       " 'ulgica',\n",
-       " 'vlgica',\n",
-       " 'wlgica',\n",
-       " 'xlgica',\n",
-       " 'ylgica',\n",
-       " 'zlgica',\n",
-       " 'àlgica',\n",
-       " 'álgica',\n",
-       " 'âlgica',\n",
-       " 'ãlgica',\n",
-       " 'èlgica',\n",
-       " 'élgica',\n",
-       " 'êlgica',\n",
-       " 'ìlgica',\n",
-       " 'ílgica',\n",
-       " 'îlgica',\n",
-       " 'òlgica',\n",
-       " 'ólgica',\n",
-       " 'ôlgica',\n",
-       " 'õlgica',\n",
-       " 'ùlgica',\n",
-       " 'úlgica',\n",
-       " 'ûlgica',\n",
-       " 'çlgica',\n",
-       " 'lagica',\n",
-       " 'lbgica',\n",
-       " 'lcgica',\n",
-       " 'ldgica',\n",
-       " 'legica',\n",
-       " 'lfgica',\n",
-       " 'lggica',\n",
-       " 'lhgica',\n",
-       " 'ligica',\n",
-       " 'ljgica',\n",
-       " 'lkgica',\n",
-       " 'llgica',\n",
-       " 'lmgica',\n",
-       " 'lngica',\n",
-       " 'logica',\n",
-       " 'lpgica',\n",
-       " 'lqgica',\n",
-       " 'lrgica',\n",
-       " 'lsgica',\n",
-       " 'ltgica',\n",
-       " 'lugica',\n",
-       " 'lvgica',\n",
-       " 'lwgica',\n",
-       " 'lxgica',\n",
-       " 'lygica',\n",
-       " 'lzgica',\n",
-       " 'làgica',\n",
-       " 'lágica',\n",
-       " 'lâgica',\n",
-       " 'lãgica',\n",
-       " 'lègica',\n",
-       " 'légica',\n",
-       " 'lêgica',\n",
-       " 'lìgica',\n",
-       " 'lígica',\n",
-       " 'lîgica',\n",
-       " 'lògica',\n",
-       " 'lógica',\n",
-       " 'lôgica',\n",
-       " 'lõgica',\n",
-       " 'lùgica',\n",
-       " 'lúgica',\n",
-       " 'lûgica',\n",
-       " 'lçgica',\n",
-       " 'lgaica',\n",
-       " 'lgbica',\n",
-       " 'lgcica',\n",
-       " 'lgdica',\n",
-       " 'lgeica',\n",
-       " 'lgfica',\n",
-       " 'lggica',\n",
-       " 'lghica',\n",
-       " 'lgiica',\n",
-       " 'lgjica',\n",
-       " 'lgkica',\n",
-       " 'lglica',\n",
-       " 'lgmica',\n",
-       " 'lgnica',\n",
-       " 'lgoica',\n",
-       " 'lgpica',\n",
-       " 'lgqica',\n",
-       " 'lgrica',\n",
-       " 'lgsica',\n",
-       " 'lgtica',\n",
-       " 'lguica',\n",
-       " 'lgvica',\n",
-       " 'lgwica',\n",
-       " 'lgxica',\n",
-       " 'lgyica',\n",
-       " 'lgzica',\n",
-       " 'lgàica',\n",
-       " 'lgáica',\n",
-       " 'lgâica',\n",
-       " 'lgãica',\n",
-       " 'lgèica',\n",
-       " 'lgéica',\n",
-       " 'lgêica',\n",
-       " 'lgìica',\n",
-       " 'lgíica',\n",
-       " 'lgîica',\n",
-       " 'lgòica',\n",
-       " 'lgóica',\n",
-       " 'lgôica',\n",
-       " 'lgõica',\n",
-       " 'lgùica',\n",
-       " 'lgúica',\n",
-       " 'lgûica',\n",
-       " 'lgçica',\n",
-       " 'lgiaca',\n",
-       " 'lgibca',\n",
-       " 'lgicca',\n",
-       " 'lgidca',\n",
-       " 'lgieca',\n",
-       " 'lgifca',\n",
-       " 'lgigca',\n",
-       " 'lgihca',\n",
-       " 'lgiica',\n",
-       " 'lgijca',\n",
-       " 'lgikca',\n",
-       " 'lgilca',\n",
-       " 'lgimca',\n",
-       " 'lginca',\n",
-       " 'lgioca',\n",
-       " 'lgipca',\n",
-       " 'lgiqca',\n",
-       " 'lgirca',\n",
-       " 'lgisca',\n",
-       " 'lgitca',\n",
-       " 'lgiuca',\n",
-       " 'lgivca',\n",
-       " 'lgiwca',\n",
-       " 'lgixca',\n",
-       " 'lgiyca',\n",
-       " 'lgizca',\n",
-       " 'lgiàca',\n",
-       " 'lgiáca',\n",
-       " 'lgiâca',\n",
-       " 'lgiãca',\n",
-       " 'lgièca',\n",
-       " 'lgiéca',\n",
-       " 'lgiêca',\n",
-       " 'lgiìca',\n",
-       " 'lgiíca',\n",
-       " 'lgiîca',\n",
-       " 'lgiòca',\n",
-       " 'lgióca',\n",
-       " 'lgiôca',\n",
-       " 'lgiõca',\n",
-       " 'lgiùca',\n",
-       " 'lgiúca',\n",
-       " 'lgiûca',\n",
-       " 'lgiçca',\n",
-       " 'lgicaa',\n",
-       " 'lgicba',\n",
-       " 'lgicca',\n",
-       " 'lgicda',\n",
-       " 'lgicea',\n",
-       " 'lgicfa',\n",
-       " 'lgicga',\n",
-       " 'lgicha',\n",
-       " 'lgicia',\n",
-       " 'lgicja',\n",
-       " 'lgicka',\n",
-       " 'lgicla',\n",
-       " 'lgicma',\n",
-       " 'lgicna',\n",
-       " 'lgicoa',\n",
-       " 'lgicpa',\n",
-       " 'lgicqa',\n",
-       " 'lgicra',\n",
-       " 'lgicsa',\n",
-       " 'lgicta',\n",
-       " 'lgicua',\n",
-       " 'lgicva',\n",
-       " 'lgicwa',\n",
-       " 'lgicxa',\n",
-       " 'lgicya',\n",
-       " 'lgicza',\n",
-       " 'lgicàa',\n",
-       " 'lgicáa',\n",
-       " 'lgicâa',\n",
-       " 'lgicãa',\n",
-       " 'lgicèa',\n",
-       " 'lgicéa',\n",
-       " 'lgicêa',\n",
-       " 'lgicìa',\n",
-       " 'lgicía',\n",
-       " 'lgicîa',\n",
-       " 'lgicòa',\n",
-       " 'lgicóa',\n",
-       " 'lgicôa',\n",
-       " 'lgicõa',\n",
-       " 'lgicùa',\n",
-       " 'lgicúa',\n",
-       " 'lgicûa',\n",
-       " 'lgicça',\n",
-       " 'lgicaa',\n",
-       " 'lgicab',\n",
-       " 'lgicac',\n",
-       " 'lgicad',\n",
-       " 'lgicae',\n",
-       " 'lgicaf',\n",
-       " 'lgicag',\n",
-       " 'lgicah',\n",
-       " 'lgicai',\n",
-       " 'lgicaj',\n",
-       " 'lgicak',\n",
-       " 'lgical',\n",
-       " 'lgicam',\n",
-       " 'lgican',\n",
-       " 'lgicao',\n",
-       " 'lgicap',\n",
-       " 'lgicaq',\n",
-       " 'lgicar',\n",
-       " 'lgicas',\n",
-       " 'lgicat',\n",
-       " 'lgicau',\n",
-       " 'lgicav',\n",
-       " 'lgicaw',\n",
-       " 'lgicax',\n",
-       " 'lgicay',\n",
-       " 'lgicaz',\n",
-       " 'lgicaà',\n",
-       " 'lgicaá',\n",
-       " 'lgicaâ',\n",
-       " 'lgicaã',\n",
-       " 'lgicaè',\n",
-       " 'lgicaé',\n",
-       " 'lgicaê',\n",
-       " 'lgicaì',\n",
-       " 'lgicaí',\n",
-       " 'lgicaî',\n",
-       " 'lgicaò',\n",
-       " 'lgicaó',\n",
-       " 'lgicaô',\n",
-       " 'lgicaõ',\n",
-       " 'lgicaù',\n",
-       " 'lgicaú',\n",
-       " 'lgicaû',\n",
-       " 'lgicaç']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 34
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "taxa de acerto 76.34% de 186 palavras, desconhecidas é 6.989247311827957%\n"
+     ]
     }
    ],
    "metadata": {}
@@ -467,7 +274,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.0 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -479,10 +286,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "13a6a118be613b2ad8317f5dec8965befb6c3ab5c6f106237789316cbb94a753"
+   "hash": "ea0dd97562e77bacfce6e2734ae2a4bd65e1c699c467f9e899bfa04a67c38880"
   }
  },
  "nbformat": 4,
